examples/test/testpolicy17473.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17473
  namespace: namespace242
spec:
  podSelector:
    matchLabels:
      key21: value12
      key41: value30
      key28: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value16
      podSelector:
        matchLabels:
          key33: value23
